Clase básica para manejar usuarios en ls DB #1 Close #3

--- a/config/DB.ini.example
+++ b/config/DB.ini.example
@@ -1,5 +1,6 @@
 [DB]
-host = "127.0.0.1"
+server = "127.0.0.1"
 port = "3306"
-user = "root"
-pass = ""
+username = "root"
+password = ""
+database_name = "4milfundadores"
