carga de fotos -- close #2

--- a/new/app/config/config.ini
+++ b/new/app/config/config.ini
@@ -6,4 +6,4 @@ password = "root"
 database_name = "4milfundadores"
 
 [IMGS]
-path = "datos/imgs"
+path = "/Users/tout/Sites/4milfundadores/new/app/fotos"
