--- a/new/.htaccess
+++ b/new/.htaccess
@@ -1,5 +1,3 @@
-php_value display_errors On
-
 Options +FollowSymlinks
 RewriteEngine On
 
@@ -10,12 +8,12 @@ IndexIgnore *
 </Files>
 
 AddDefaultCharset utf-8
-AddCharset utf-8 .css .js .json .rss .vtt .xml .html
+AddCharset utf-8 .css .js .json .rss .vtt .xml .html .php
 
 <IfModule mod_headers.c>
   Header set X-UA-Compatible "IE=Edge,chrome=1"
   # mod_headers can't match by content-type, but we don't want to send this header on *everything*...
-  <FilesMatch "\.(js|css|gif|png|jpe?g|pdf|xml|oga|ogg|m4a|ogv|mp4|m4v|webm|svg|svgz|eot|ttf|otf|woff|ico|webp|appcache|manifest|htc|crx|oex|xpi|safariextz|vcf)$" >
+  <FilesMatch "\.(js|css|gif|png|jpe?g|pdf|xml|svg|svgz|eot|ttf|otf|woff|ico|webp|appcache)$">
     Header unset X-UA-Compatible
   </FilesMatch>
 </IfModule>
