--- a/new/package.json
+++ b/new/package.json
@@ -20,6 +20,9 @@
     "gulp": "~3.8.8",
     "gulp-pleeease": "~1.0.4",
     "gulp-stylus": "~1.3.3",
-    "nib": "~1.0.4"
+    "nib": "~1.0.4",
+    "gulp-browserify": "~0.5.0",
+    "gulp-rename": "~1.2.0",
+    "gulp-uglify": "~1.0.1"
   }
 }
